tests/expectations/compiler/structs/inline_undefined.out
Error [ETYC0372017]: The type `Foo` is not found in the current scope.
    --> compiler-test:4:9
     |
   4 |         let a: Foo = Foo { };
     |         ^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372005]: Unknown struct or record `Foo`
    --> compiler-test:4:22
     |
   4 |         let a: Foo = Foo { };
     |                      ^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
